--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -14,17 +14,36 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/activity_horizontal_margin">
 
+        <ImageView
+            android:id="@+id/image_movie"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/boldee_icons" />
+
         <TextView
             android:id="@+id/text_movie_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"/>
+            android:layout_toEndOf="@+id/image_movie"
+            android:layout_toRightOf="@+id/image_movie"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_movie_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/text_movie_title" />
+            android:layout_below="@+id/text_movie_title"
+            android:layout_toEndOf="@+id/image_movie"
+            android:layout_toRightOf="@+id/image_movie" />
+
+        <TextView
+            android:id="@+id/text_movie_overview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_movie_year"
+            android:layout_toEndOf="@+id/image_movie"
+            android:layout_toRightOf="@+id/image_movie"/>
 
     </RelativeLayout>
 
