--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -18,9 +18,9 @@
             android:id="@+id/image_movie"
             android:layout_width="100dp"
             android:layout_height="150dp"
-            android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/poster_margin"
-            android:layout_marginEnd="@dimen/poster_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:contentDescription="@string/poster"
             android:src="@mipmap/boldee_icons" />
 
         <TextView
