--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -11,41 +11,39 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/activity_horizontal_margin">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/image_movie"
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            android:layout_marginRight="@dimen/poster_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:contentDescription="@string/poster"
-            android:src="@mipmap/boldee_icons" />
+        <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/percent_relative_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/image_movie"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:contentDescription="@string/poster"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/boldee_icons"
+                app:layout_aspectRatio="178%"
+                app:layout_widthPercent="100%" />
+        </android.support.percent.PercentRelativeLayout>
 
         <TextView
             android:id="@+id/text_movie_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/image_movie"
-            android:layout_toRightOf="@+id/image_movie"
-            android:textStyle="bold" />
+            style="@style/card_title"
+            android:layout_below="@+id/percent_relative_layout" />
 
         <TextView
             android:id="@+id/text_movie_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text_movie_title"
-            android:layout_toEndOf="@+id/image_movie"
-            android:layout_toRightOf="@+id/image_movie" />
+            style="@style/card_subtitle"
+            android:layout_below="@+id/text_movie_title" />
 
         <TextView
             android:id="@+id/text_movie_overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text_movie_year"
-            android:layout_toEndOf="@+id/image_movie"
-            android:layout_toRightOf="@+id/image_movie"/>
+            style="@style/card_supporting_text"
+            android:layout_below="@+id/text_movie_year" />
 
     </RelativeLayout>
 
